<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/notice_app_offline"
                    android:textColor="@color/white" />

            </LinearLayout>



            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/newsTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_type_default" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/actualityTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_type_actuality" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/hotTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_type_hot" />


            </com.google.android.material.tabs.TabLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="News"
                    android:textColor="@color/color_primary"
                    android:textSize="35dp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_main_recycler_view"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

        </LinearLayout>


    </LinearLayout>
</layout>